package org.marco.designpattern.gof.creational.factory.factorymethod;

/**
 * @author: zyr
 * @date: 2019/5/23
 * @description: 抽象工厂类
 */
public interface IFactory {
    public IProduct createProduct();
}
