package org.marco.designpattern.gof.creational.factory.factorymethod;

/**
 * @author: zyr
 * @date: 2019/5/23
 * @description: 抽象产品
 */
public interface IProduct {
    IProduct getProduct();
}
